NULL = 

EXTRA_DIST = \
	aberth.h \
	algorithms.h \
	cluster.h \
	convex.h \
	data.h \
	hessenberg-determinant.h \
	horner.h \
	jacobi-aberth.h \
	improve.h \
	input-buffer.h \
	input-output.h \
	options.h \
	mandelbrot-user.h \
	newton.h \
	radii.h \
	secular-evaluation.h \
	solve.h \
	sort.h \
	starting.h \
	threading.h \
	tools.h \
	touch.h \
	utils.h \
	$(NULL)

