NULL = 

EXTRA_DIST = \
	aberth.h \
	algorithms.h \
	cluster.h \
	convex.h \
	data.h \
	hessenberg-determinant.h \
	horner.h \
	jacobi-aberth.h \
	improve.h \
	input-buffer.h \
	input-output.h \
	list.h \
	options.h \
	mandelbrot-user.h \
	newton.h \
	radii.h \
	secular-evaluation.h \
	secular-regeneration.h \
	solve.h \
	sort.h \
	starting.h \
	starting-configuration.h \
	threading.h \
	tools.h \
	touch.h \
	utils.h \
	formal/formal-monomial.h \
	formal/formal-polynomial.h \
	system/abstract-input-stream.h \
	system/file-input-stream.h \
	system/memory-file-stream.h \
	$(NULL)

